Bug #178045.  floating point error when using gtk2 on startup.  Make sure to check if the gtk dpi is greater than zero.  r=owen sr=scc a=jesup